--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,6 +6,7 @@
     padding: 10px 30px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .left {
@@ -20,6 +21,11 @@
     gap: 25px;
 }
 
+.center {
+    font-size: 30px;
+    letter-spacing: 2px;
+}
+
 .item > img {
     height: 12px;
 }
@@ -27,4 +33,30 @@
 .item {
     display: flex;
     align-items: center;
+}
+
+.icons {
+    display: flex;
+    color: #777;
+    cursor: pointer;
+    gap: 15px;
+}
+
+.cartIcon {
+    position: relative;
+}
+
+.cartIcon > span {
+    font: size 12px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #2879fe;
+    color: white;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
