--- a/src/Components/FeaturedProduct/FeaturedProduct.css
+++ b/src/Components/FeaturedProduct/FeaturedProduct.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 50px;
 }
 
 .top > h2 {
@@ -19,4 +20,6 @@
 
 .bottom {
     display: flex;
+    justify-content: center;
+    gap: 50px;
 }
