--- a/src/Components/FeaturedProduct/FeaturedProduct.css
+++ b/src/Components/FeaturedProduct/FeaturedProduct.css
@@ -2,23 +2,23 @@
     margin: 100px 200px;
 }
 
-.top {
+.FeaturedProducts > .top {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 50px;
 }
 
-.top > h2 {
+.FeaturedProducts > .top > h2 {
     flex: 2;
 }
 
-.top > p {
+.FeaturedProducts > .top > p {
     flex: 3;
     color: gray;
 }
 
-.bottom {
+.FeaturedProducts > .bottom {
     display: flex;
     justify-content: center;
     gap: 50px;
