Finished category page

--- a/src/Pages/Products/Products.css
+++ b/src/Pages/Products/Products.css
@@ -12,6 +12,20 @@
     top: 50px;
 }
 
+.products > .left > .filterItem {
+    margin-bottom: 30px;
+}
+
+.products > .left > .filterItem > h2 {
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
+.products > .left > .filterItem > .inputItem {
+    margin-bottom: 10px;
+    
+}
+
 .products > .right {
     flex: 3;
     display: flex;
