--- a/src/Pages/Product/product.css
+++ b/src/Pages/Product/product.css
@@ -35,4 +35,20 @@
 
 .product > .right {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: flex-start;
+}
+
+.product > .right > .price {
+    font-size: 30px;
+    color: #2879fe;
+    font-weight: 500;
+}
+
+.product > .right > p {
+    font-size: 18px;
+    font-weight: 300;
+    text-align: justify;
 }
