--- a/src/Pages/Product/product.css
+++ b/src/Pages/Product/product.css
@@ -52,3 +52,60 @@
     font-weight: 300;
     text-align: justify;
 }
+
+.quantity {
+     display: flex;
+     align-items: center;
+     gap: 10px;
+}
+
+.quantity > button {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: none;
+}
+
+.product > .right > .add {
+    width: 250px;
+    padding: 10px;
+    background-color: #2879fe;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    gap: 20px;
+    cursor: pointer;
+    font-weight: 500;
+    border: none;
+}
+
+.right > .link {
+    display: flex;
+    gap: 20px;
+}
+
+.right > .link > .item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #2879fe;
+    font-size: 14px;
+}
+
+.right > .info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: grey;
+    font-size: 14px;
+    margin-top: 30px;
+}
+
+.right > .info > hr {
+    width: 200px;
+    border: 1px solid rgb(204, 203, 203);
+}
